# SensorsCalibration

py/: ocam_disorder.py
surround-camera/auto_calib_fisheye/: BEV_TEST_RESULTS.md  CHECKLIST.md  CMakeLists.txt  COORDINATE_SYSTEM_ANALYSIS.md  CPAC_INTEGRATION_ANALYSIS.md  DEBUGGING_STATUS.md  DEBUGGING_SUMMARY.md  DIAGNOSE.sh  FINAL_STATUS.md  FIXES_SUMMARY.md  NEXT_STEPS.md  OCAM_CALIBRATION.md  OPTIMIZATION_SUMMARY.md  PROJECTION_ANALYSIS.md  QUICK_TEST.sh  README_BEV.md  README_DEBUGGING.md  README_OCAM.md  RUN_INSTRUCTIONS.md  build_and_test.sh  build_with_ocam.sh  run_ocam_calibration.sh  test_bev_analysis.md  test_bev_identity.cpp  test_bev_no_tail.cpp  test_bev_only.sh  test_bev_simple.cpp  test_ocam_debug.sh  test_simple_bev.cpp  view_bev_results.sh
surround-camera/auto_calib_fisheye/2_dog/calibration_20260327_183123/: calibration_results.json5
surround-camera/auto_calib_fisheye/2_dog/calibration_20260327_195135/: calibration_results.json5
surround-camera/auto_calib_fisheye/2_dog/calibration_20260327_195442/: calibration_results.json5
surround-camera/auto_calib_fisheye/2_dog/param/: camera_extrinsics_ikalibr.json5  park_left.json
surround-camera/auto_calib_fisheye/include/: optimizer.h  texture_extractor.h
surround-camera/auto_calib_fisheye/src/: calibration.cpp  optimizer.cpp  texture_extractor.cpp
surround-camera/manual_calib/: CMakeLists.txt  calibration_0.txt  calibration_1.txt  calibration_2.txt  calibration_3.txt
surround-camera/manual_calib/src/: run_avm.cpp
surround-camera/manual_calib_front3/: CMakeLists.txt  METRICS_GUIDE.md  README.md
surround-camera/manual_calib_front3/2_dog/param/: camera_extrinsics_ikalibr.json5  park_back.json  park_front.json
surround-camera/manual_calib_front3/scripts/: analyze_metrics.py
surround-camera/manual_calib_front3/src/: calibration_metrics.cpp  calibration_metrics.hpp  ocam_verify.cpp  run_front3_calib.cpp  run_front3_calib_debug.cpp  run_front3_calib_final.cpp  run_front3_calib_fixed.cpp  run_front3_calib_v2.cpp  run_front3_calib_v3.cpp  run_front3_calib_v4.cpp
surround-camera/manual_calib_new/: CHANGES.md  CMakeLists.txt  OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  OUTPUT_FORMAT.md  README.md  RESOLUTION_OPTIMIZATION.md  SHADOW_PARAMS.md  calibration_0.txt  calibration_1.txt  calibration_2.txt  calibration_3.txt  camera_extrinsics_calibrated.json  check_shadow.sh  test_calibration.sh  test_optimized.sh  test_shadow  test_shadow.cpp  verify_config.sh
surround-camera/manual_calib_new/2_dog/param/: camera_extrinsics_ikalibr.json.manual.json  camera_extrinsics_ikalibr.json5  front_left.json  front_right.json  park_right.json
surround-camera/manual_calib_new/src/: run_avm_new.cpp
